# libcnotify

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libcnotify-wiki.ini  libcnotify.ini  libcnotify.pc.in  libcnotify.spec.in
.github/workflows/: build_linux.yml  coverage.yml
.travis/: runtests.sh  script.sh
common/: config.h.in  config_winapi.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcnotify.h.in
include/libcnotify/: definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcnotify/: Makefile.am  libcnotify.c  libcnotify.rc.in  libcnotify_definitions.h.in  libcnotify_extern.h  libcnotify_libcerror.h  libcnotify_libcstring.h  libcnotify_print.c  libcnotify_print.h  libcnotify_stream.c  libcnotify_stream.h  libcnotify_support.c  libcnotify_support.h  libcnotify_types.h  libcnotify_unused.h  libcnotify_verbose.c  libcnotify_verbose.h
m4/: tests.m4
manuals/: Makefile.am  libcnotify.3
msvscpp/: Makefile.am  libcnotify.sln
msvscpp/cnotify_test_get_version/: cnotify_test_get_version.vcproj
msvscpp/cnotify_test_print/: cnotify_test_print.vcproj
msvscpp/cnotify_test_stream/: cnotify_test_stream.vcproj
msvscpp/cnotify_test_stream_set/: cnotify_test_stream_set.vcproj
msvscpp/cnotify_test_support/: cnotify_test_support.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcnotify_dll/: libcnotify_dll.vcproj
tests/: Makefile.am  cnotify_test_get_version.c  cnotify_test_libcerror.h  cnotify_test_libcnotify.h  cnotify_test_libcstring.h  cnotify_test_macros.h  cnotify_test_print.c  cnotify_test_stream.c  cnotify_test_stream_set.c  cnotify_test_support.c  cnotify_test_unused.h  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_functions.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_stream_set.sh
