include_HEADERS = \
	libcnotify.h

pkginclude_HEADERS = \
	libcnotify/definitions.h \
	libcnotify/error.h \
	libcnotify/extern.h \
	libcnotify/features.h \
	libcnotify/types.h

EXTRA_DIST = \
	libcnotify.h.in \
	libcnotify/definitions.h.in \
	libcnotify/features.h.in \
	libcnotify/types.h.in

DISTCLEANFILES = \
	libcnotify.h \
	libcnotify/definitions.h \
	libcnotify/features.h \
	libcnotify/types.h \
	Makefile \
	Makefile.in

