MSVSCPP_FILES = \
	cnotify_test_get_version/cnotify_test_get_version.vcproj \
	cnotify_test_print/cnotify_test_print.vcproj \
	cnotify_test_stream/cnotify_test_stream.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcnotify.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

