MSVSCPP_FILES = \
	cnotify_test_print/cnotify_test_print.vcproj \
	cnotify_test_stream/cnotify_test_stream.vcproj \
	cnotify_test_support/cnotify_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcnotify.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

